# zephyr

./: CMakeLists.txt
arch/common/: gen_isr_tables.py
boards/arm/DA14699/: DA14699.dts  DA14699.yaml  DA14699_defconfig  Kconfig.board  Kconfig.defconfig
boards/arm/da1469x_dev_kit_pro/: Kconfig.board  Kconfig.defconfig  da1469x_dev_kit_pro.dts  da1469x_dev_kit_pro.yaml  (+2 more)
cmake/: dts_test
cmake/app/: boilerplate.cmake
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.da1469x  flash_da1469x.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.da1469x  gpio_da1469x.c  gpio_da1469x.h
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.da1469x  uart_da1469x.c
kernel/: init.c
scripts/: gen_relocate_app.py
soc/arm/: CMakeLists.txt
soc/arm/DA1469x/: .gitignore  CMakeLists.txt  Kconfig  flash_script_variables.py  program_flash.py  soc.h  soc_register.h
soc/arm/DA1469x/da14699/: DA1469x_helper_defines.h  init_da1469x.c  system_da1469x.c
soc/arm/DA1469x/da14699/bsp/: CMakeLists.txt  interrupts.h  sdk_defs.h  sys_tcs_da1469x.h  system_da1469x.c
soc/arm/DA1469x/da14699/bsp/config/: bsp_memory_defaults.h  custom_config_qspi.h  custom_config_ram.h
soc/arm/DA1469x/da14699/bsp/include/: DA1469xAB.h  sdk_defs.h
soc/arm/DA1469x/da14699/bsp/ldscripts/non_ble_projects/: sections_da1469x.ld.h
soc/arm/DA1469x/da14699/bsp/snc/src/: CMakeLists.txt
soc/arm/DA1469x/da14699/bsp/startup/DA1469x/: CMakeLists.txt  init_da1469x.c
soc/arm/DA1469x/da14699/bsp/startup/DA1469x/GCC/: startup_da1469x.S
soc/arm/DA1469x/da14699/bsp/system/loaders/segger_flash_loader/config/: custom_config.h
soc/arm/DA1469x/da14699/bsp/system/loaders/uartboot/config/: custom_config.h
soc/arm/DA1469x/da14699/bsp/system/sys_man/: CMakeLists.txt
soc/arm/DA1469x/da14699/hw/: CMakeLists.txt  hw_sys_da1469x.c
soc/arm/DA1469x/da14699/middleware/adapters/src/: CMakeLists.txt
soc/arm/DA1469x/extra_examples/: uart_poll_in.md
soc/arm/da1469x/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.series  Kconfig.soc  README.md  da1469x_dev_kit_pro.conf  erase_flash.py
soc/arm/da1469x/da14699/: CMakeLists.txt  Kconfig.defconfig.da14699  Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  da1469x_m33_sleep.S  gcc_startup_da1469x.S  linker.ld  soc.c  soc.h  soc_register.h  target_property_compiler_imacros.h
soc/arm/da1469x/da14699/bsp/: CMakeLists.txt
soc/arm/da1469x/da14699/bsp/config/: custom_config_qspi.h
soc/arm/da1469x/da14699/bsp/include/: sdk_defs.h
soc/arm/da1469x/da14699/bsp/memory/src/: CMakeLists.txt
soc/arm/da1469x/da14699/bsp/peripherals/include/: hw_sys.h
soc/arm/da1469x/da14699/bsp/peripherals/src/: CMakeLists.txt  hw_pdc.c
soc/arm/da1469x/da14699/bsp/snc/include/: snc.h
soc/arm/da1469x/da14699/bsp/snc/src/: SeNIS.c
soc/arm/da1469x/da14699/bsp/startup/DA1469x/: CMakeLists.txt
soc/arm/da1469x/da14699/bsp/startup/DA1469x/GCC/: CMakeLists.txt  exception_handlers.S
soc/arm/da1469x/da14699/bsp/system/sys_man/: CMakeLists.txt  sys_tcs_da1469x.c
soc/arm/da1469x/da14699/bsp/system/sys_man/include/: sys_power_mgr.h
soc/arm/da1469x/da14699/middleware/: CMakeLists.txt
soc/arm/da1469x/da14699/middleware/adapters/include/: ad_nvms.h
soc/arm/da1469x/da14699/middleware/adapters/src/: CMakeLists.txt
soc/arm/da1469x/hal_da1469x/: CMakeLists.txt  hal_da1469x_uart.c  hal_da1469x_uart.h
(+14 files in other folders)
